Ged vf